--- a/index.html
+++ b/index.html
@@ -11,25 +11,8 @@
 	</style>
   </head>
  
-  <body>
-	<font color="white" size=5px>How to unlock new levels?<font/>  
-	<iframe width="100%" height="315" marginheight="20" src="https://www.youtube.com/embed/QAkbeKD7oFE?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-	<br>	
-	<br>
-	<br>
-	<br>	
-	<br>
-	<br>
-	<br>	
-	<br>
-	<br>
-  <p>
-  <a href="https://www.youtube.com/watch?v=aJU88b1c3GI" target="_blank">
-    <img src="loadingback.png" style='width:100%;' border="0" alt="Null">
-  </a>
-</p>
+  <body> 
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/VFhGdCNulu4?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </body>
 		
 </html>
-
-
